--- a/app/views/streaming_services/index.html.erb
+++ b/app/views/streaming_services/index.html.erb
@@ -9,6 +9,7 @@
       <th>Monthly Price</th>
       <th>Original Titles</th>
       <th>Subscription Status</th>
+      <th>Top Titles</th>
 
     </tr>
   </thead>
@@ -16,15 +17,13 @@
   <tbody>
     <% @streaming_services.each do |streaming_service| %>
       <tr>
+        <td></td>
         <td><%= link_to streaming_service.name, streaming_service_path(streaming_service.id)%></td>
         <td><%= streaming_service.monthly_price%></td>
         <td><%= streaming_service.original_titles%></td>
-        <td><%= link_to "Add Subscription", new_streaming_service_subscription_path(streaming_service)%></td>
+        <td><%= link_to "Add Subscription", new_streaming_service_subscription_path(streaming_service) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Streaming Service', new_streaming_service_path %>
