--- a/app/views/streaming_services/index.html.erb
+++ b/app/views/streaming_services/index.html.erb
@@ -1,11 +1,14 @@
-<p id="notice"><%= notice %></p>
+<style>
+h1 {text-align: center;}
+</style>
 
 <h1>Streaming Services</h1>
 
-<table>
+<table align="center" border="0" cellpadding="10" cellspacing="0">
   <thead>
     <tr>
-      <th>Streaming Service</th>
+      <th></th>
+      <th>Visit Website</th>
       <th>Monthly Price</th>
       <th>Original Titles</th>
       <th>Subscription Status</th>
@@ -17,11 +20,12 @@
   <tbody>
     <% @streaming_services.each do |streaming_service| %>
       <tr>
-        <td></td>
-        <td><%= link_to streaming_service.name, streaming_service_path(streaming_service.id)%></td>
+        <td><img width="175" height="98.5" Padding: 10px; src="<%= streaming_service.image_link %>"alt=""/></td>
+        <td><%= link_to streaming_service.name, streaming_service_path(streaming_service.id) %></td>
         <td><%= streaming_service.monthly_price%></td>
         <td><%= streaming_service.original_titles%></td>
         <td><%= link_to "Add Subscription", new_streaming_service_subscription_path(streaming_service) %></td>
+        <td><% @top_titles.each do |top_title| if streaming_service.id == top_title.streaming_service_id %> <li><%=top_title.title%></li><% end %><% end %></td>
       </tr>
     <% end %>
   </tbody>
