--- a/app/views/streaming_services/index.html.erb
+++ b/app/views/streaming_services/index.html.erb
@@ -7,7 +7,7 @@ h1 {text-align: center;}
 <table align="center" border="0" cellpadding="10" cellspacing="0">
   <thead>
     <tr>
-      <th></th>
+      <th>Provider</th>
       <th>Visit Website</th>
       <th>Monthly Price</th>
       <th>Original Titles</th>
