Adds a scope method to the Subscription model that assists in finding subscriptions by user_id. Also changes the monthly_price column in the subsciptions table to a float value and updates the form_with in the index view accordingly.

--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -12,7 +12,7 @@
   
     <%= form_with(model: subscription) do |f|%>
       <%=f.label "Enter your monthly price:"%>
-      <%=f.text_field(:monthly_price)%>
+      <%=f.number_field :monthly_price, step: 0.01%>
       <%= f.hidden_field :streaming_service_id, :value => params[:streaming_service_id]%>
       <%= form.submit %>
     </div>
