--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -5,11 +5,12 @@
     <% @subscriptions.each do |subscription| %>
     
      <p><%= subscription.streaming_service.name %>
-      <br><strong>Monthly price:</strong> <%= subscription.monthly_price %>
+      <br><strong>Monthly price:</strong> $<%= subscription.monthly_price %>
       <%= link_to 'Edit',  edit_streaming_service_subscription_path(subscription, subscription.streaming_service) %>
-      <%= button_to("Delete Subscription", subscription, method: :delete, data: { confirm: "Really?" }) %></p>   
-      
+      <%= button_to("Delete Subscription", subscription, method: :delete, data: { confirm: "Really?" }) %></p>     
     <% end %>
+
+    <p>Your total monthly expenses: <strong>$<%=@total_price%> + taxes.</p></strong>
 
   </body>
 
