Saves changes ahead of routes refactoring.

--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add Your Subscription Information for <%=@streaming_service.name%>.</h1>
+<h3>Add Your Subscription Information for <strong><%=@streaming_service.name%></strong>.</h3>
 
 <%= render 'form', subscription: @subscription %>
 
