--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%if current_user %>
     <%=link_to "Browse Streaming Services", streaming_services_path %>
     <%=link_to "My Subscriptions", user_subscriptions_path(current_user) %>
-    <%= link_to "Log Out", logout_path, method: :post %>
+    <%= button_to "Log Out", logout_path, method: :post %>
     <%else%>
       <%= link_to "Log In", login_path %>
       <%= link_to "Sign Up", signup_path %>
