--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,4 +10,4 @@
   <%=f.password_field :password_confirmation %>
   <%=f.submit "Sign Up"%>
 <%end%>
-<%= button_to "Log In With Google", "/auth/google_oauth2"%>
+<%= button_to "Sign In With Google", "/auth/google_oauth2"%>
