Fixes routing for the back buttons on both the edit and new page for subscriptions.

--- a/app/views/subscriptions/edit.html.erb
+++ b/app/views/subscriptions/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', streaming_service_id: @subscription.streaming_service_id, subscription: @subscription%>
 
-<%= link_to 'Back', subscriptions_path %>
+<%= link_to 'Back', user_subscriptions_path(current_user) %>
