Adds error handling in the event that a user enters an empty monthly price value on a subscription.

--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Subscriptions</h1>
 
+<% flash.each do |type, msg| %>
+    <i><strong><%= msg %></strong></i>
+<% end %>
 
   <body>
     <% @subscriptions.each do |subscription| %>
