--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,20 +2,25 @@
 <html>
 
 <link rel="stylesheet" href="/stylesheets/application.css">
+  
   <head>
     <title>Stream Tracker</title>
-    <h2>Stream Tracker</h2>
-    <h4>Manage Your Streaming Service Subscriptions with Ease!</h4>
+    <div class = "banner">
+      <h2>Stream Tracker</h2>
+      <h4>Manage Your Streaming Service Subscriptions with Ease!</h4>
+    </div>
+  </head>
 
   <body style text-align: center>
     <%if current_user %>
     <%=link_to "Browse Streaming Services", streaming_services_path %>
-    <%=link_to "My Subscriptions", user_subscriptions_path(current_user) %>
+    <%=link_to "My Subscriptions Dashboard", user_subscriptions_path(current_user) %>
     <%= button_to "Log Out", logout_path, method: :post %>
     <%else%>
       <%= link_to "Log In", login_path %>
       <%= link_to "Sign Up", signup_path %>
     <%end%>
     <%= yield %>
+
   </body>
 </html>
