--- a/app/views/streaming_services/index.html.erb
+++ b/app/views/streaming_services/index.html.erb
@@ -8,7 +8,7 @@ h1 {text-align: center;}
   <thead>
     <tr>
       <th>Provider</th>
-      <th>Visit Website</th>
+      <th>Website</th>
       <th>Monthly Price</th>
       <th>Original Titles</th>
       <th>Subscription Status</th>
